<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.santanawilliams.lostandfound.Contact">



    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView"
        android:textSize="24sp"
        android:textColor="@android:color/background_light" />

    <TextView
        android:gravity="center_horizontal"
        android:text="@string/phone"
        android:layout_width="match_parent"
        android:id="@+id/textView8"
        android:layout_height="25dp"
        android:textColor="@android:color/darker_gray" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_weight=".3"
                android:text="Name:"
                android:layout_gravity="bottom"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textSize="18sp"
                android:textColor="@android:color/background_light" />

            <EditText
                android:layout_weight=".7"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/nameInput"
                style="@android:style/Widget.AutoCompleteTextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_weight=".3"
                android:text="Subject: "
                android:layout_gravity="bottom"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textSize="18sp"
                android:textColor="@android:color/background_light" />

            <EditText
                android:layout_weight=".7"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/subjectInput" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:layout_weight="1"
                android:layout_span="2"
                android:text="Mark as Urgent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/urgentChk"
                android:textSize="18sp" />
        </TableRow>


    </TableLayout>

    <TextView
        android:text="@string/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textColor="@android:color/background_light" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:ems="10"
        android:gravity="top"
        android:id="@+id/messageInput"
        android:layout_height="175dp" />

    <Button
        android:text="@string/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sendBtn"
        android:onClick="sendClick" />

</LinearLayout>
